[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Fonts/default_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Scripts/SelectedShipPart.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/smaller_font.tres" type="DynamicFont" id=3]

[node name="SelectedShipPart" type="Node2D"]
script = ExtResource( 2 )

[node name="TextureRect" type="ColorRect" parent="."]
margin_right = 200.0
margin_bottom = 80.0
color = Color( 0.509804, 0.509804, 0.509804, 1 )

[node name="PartName" type="Label" parent="."]
margin_left = 20.0
margin_top = 25.0
margin_right = 68.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 1 )
text = "Part"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorkType" type="Label" parent="."]
margin_left = 100.0
margin_top = 25.0
margin_right = 148.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 1 )
text = "Repair"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 175.0
margin_right = 198.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 3 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="deselect_ship_part"]
